# FastAPI_ToDo_List

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
contrib/: .env-example
migrations/: env.py
migrations/versions/: 08a4edb9b3be_create_todos_table.py  36309cb6bb7f_recriando_migrations_do_zero_devido_.py  6b53af69cf6f_adicionando_created_at_e_updated_at_na_.py  d2c29a05f204_create_users_table.py  de289b68fd90_exercicio_02_aula_4.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_render_html.py  test_security.py  test_todo.py  test_users.py
todo_list/: app.py  database.py  models.py  schemas.py  security.py  settings.py
todo_list/routers/: auth.py  html_example.py  todos.py  users.py
